--- a/generator-egg/generators/app/templates/patternlab/public/patterns/02-organisms-99-misc/index.html
+++ b/generator-egg/generators/app/templates/patternlab/public/patterns/02-organisms-99-misc/index.html
@@ -10,10 +10,10 @@
 		<link href='https://fonts.googleapis.com/css?family=Raleway:800,500|Neuton:400,800,700' rel='stylesheet' type='text/css'>
 
 		<!-- Minified and Concatenated Vendor CSS -->
-		<link rel="stylesheet" href="../../../../build/css/plugins.min.css?1441111593" media="all" />
+		<link rel="stylesheet" href="../../../../build/css/plugins.min.css?1441236260" media="all" />
 
 		<!-- Custom CSS -->
-		<link rel="stylesheet" href="../../../../build/css/main.min.css?1441111593" media="all" />
+		<link rel="stylesheet" href="../../../../build/css/main.min.css?1441236260" media="all" />
 		
 		<!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
 		<!-- never cache patterns -->
@@ -34,8 +34,8 @@
 		</script>
 
 		<!--[if (gte IE 6)&(lte IE 8)]>
-		  <script type="text/javascript" src="../../../../build/js/selectivizr-min.js"></script>
-		  <link rel="stylesheet" href="../../../../build/css/ie8.css" />
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
+			<link rel="stylesheet" href="../../../../build/css/ie8.css" />
 		<![endif]-->
 		
 		<!-- Modernizr (must be in the head) -->
@@ -398,10 +398,10 @@
 	}
 </script>
 
-<script id="pl-js-polyfill-insert-1441111593">
+<script id="pl-js-polyfill-insert-1441236260">
 	(function() {
 		if (self != top) {
-			var cb = '1441111593';
+			var cb = '1441236260';
 			var js = [];
 			if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 				js.push("styleguide/bower_components/classList.min.js");
@@ -411,10 +411,10 @@
 	})();
 </script>
 
-<script id="pl-js-insert-1441111593">
+<script id="pl-js-insert-1441236260">
 	(function() {
 		if (self != top) {
-			var cb = '1441111593';
+			var cb = '1441236260';
 			var js = [ { "src": "styleguide/bower_components/jwerty.min.js", "dep": [ { "src": "annotations/annotations.js", "dep": [ "styleguide/js/patternlab-pattern.min.js" ] } ] } ];
 			scriptLoader.run(js,cb,'pl-js-insert');
 		}
@@ -423,7 +423,7 @@
 
 
 	<!-- jquery -->
-	<script src="../../../../build/js/jquery-1.11.3.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
 	<!-- Minified and Concatenated Vendor and Custom Scripts -->
 	<script src="../../../../build/js/plugins.min.js"></script>
