--- a/generator-egg/generators/app/templates/src/sass/components/_Card.scss
+++ b/generator-egg/generators/app/templates/src/sass/components/_Card.scss
@@ -69,7 +69,7 @@ $Card-spacing: 30px;
 
 // for multiple row up 4up cards
 .CardGrid {
-    @include u-multiRowGrid--gutter( 1100px, 30px, 25% );
+    @include u-multiRowGrid--gutter( 700px, 30px, 50%, 1100px, 25% );
 }
 
 // for single row of equal columns
